GitHub Pagesへの自動デプロイメントを設定し、404ページを追加。SPAルーティングをサポートするためのリダイレクト処理を実装。

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "build:github": "tsc -b && vite build --mode production",
     "lint": "biome lint .",
     "lint:fix": "biome lint --write .",
     "format": "biome format --write .",
