chore: setup automated release management with semantic versioning
- Add release-drafter configuration for automated release notes
- Implement semantic versioning with label-based version increments
- Add GitHub Actions workflows for:
  - Automated release draft creation
  - Version update on release publish
  - Auto-labeling of PRs based on file changes
- Create issue templates for bug reports and feature requests
- Add PR template with proper categorization
- Update Node.js version to 20+ across all workflows
- Add engines field to package.json for Node.js requirements
- Update README with comprehensive release process documentation

This patch introduces a complete automated release management system
that follows semantic versioning best practices.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,20 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
+  "description": "A modern Todo application built with React + TypeScript + Vite",
+  "keywords": ["todo", "react", "typescript", "vite", "material-ui", "tanstack-router"],
+  "homepage": "https://thyt-lab.github.io/todo-app-with-agent/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/thyt-lab/todo-app-with-agent.git"
+  },
+  "bugs": {
+    "url": "https://github.com/thyt-lab/todo-app-with-agent/issues"
+  },
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
