fix: add checkout step to auto-labeler workflow
- Add actions/checkout@v4 step to ensure repository files are available
- This fixes the issue where labeler.yml configuration file was not found locally
- Resolves #8

--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -12,6 +12,9 @@ jobs:
   auto-label:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        
       - name: Auto Label
         uses: actions/labeler@v5
         with:
