fix: add issues write permission and sync-labels option
- Add 'issues: write' permission to allow label creation
- Add 'sync-labels: true' to automatically create missing labels
- This resolves the 'unauthorized' error when creating labels

--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -7,6 +7,7 @@ on:
 permissions:
   contents: read
   pull-requests: write
+  issues: write
 
 jobs:
   auto-label:
@@ -20,3 +21,4 @@ jobs:
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           configuration-path: .github/labeler.yml
+          sync-labels: true
