--- a/.github/workflows/update-version.yml
+++ b/.github/workflows/update-version.yml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          ref: main
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -37,5 +39,9 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add package.json
-          git commit -m "chore: update version to ${{ steps.version.outputs.version }}" || exit 0
-          git push origin main
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "chore: update version to ${{ steps.version.outputs.version }}"
+            git push origin HEAD:main
+          fi
